--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.21"
+    ext.glide_version = "4.11.0"
+    ext.koin_version = "2.1.6"
+    ext.room_version = "2.2.5"
+    ext.lifecycle_version = "2.2.0"
+    ext.kotlin_coroutines_version = "1.3.9"
+
+    ext.retrofit_version = "2.9.0"
+    ext.logging_interceptor_version = '4.9.0'
     repositories {
         google()
         jcenter()
