--- a/cart/src/main/AndroidManifest.xml
+++ b/cart/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="com.example.tokokuid.cart">
 
+
     <dist:module
         dist:instant="false"
         dist:title="@string/title_cart">
@@ -12,7 +13,10 @@
         <dist:fusing dist:include="true" />
     </dist:module>
 
-    <application>
+
+    <application
+        android:supportsRtl="true"
+        >
         <activity android:name=".CartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
