--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,17 @@ buildscript {
     ext.koin_version = "2.1.6"
     ext.room_version = "2.2.6"
     ext.lifecycle_version = "2.2.0"
-    ext.kotlin_coroutines_version = "1.3.9"
+    ext.kotlin_coroutines_version = "1.4.2"
 
     ext.retrofit_version = "2.9.0"
     ext.logging_interceptor_version = '4.9.0'
+    ext.leak_canary_version = '2.4'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
