--- a/cart/src/main/AndroidManifest.xml
+++ b/cart/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
     </dist:module>
 
 
-    <application>
+    <application
+        android:supportsRtl="true">
         <activity android:name=".CartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
