--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -18,4 +18,7 @@ dependencies {
 
     //LeakCanary
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leak_canary_version"
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:$lottie_version"
 }
